...
        width: widget.width,
        height: widget.height,
        decoration: BoxDecoration(
          borderRadius: BorderRadius.circular(widget.height/3),
        ),
        child: TextField(
          key: const ValueKey('search-text-field-wg'),
          focusNode: widget.focusNode,
          keyboardType: widget.keyboardType,
          controller: widget.controller,
          style: CustomTextStyles.paragraph(),
          maxLines: 1,
          onSubmitted: (value) => setState(() {
...
