...
                  cat.name,
                  style: CustomTextStyles.titleH2(
                    isBold: true,
                  ),
                ),
                InkWell(
                  key: const ValueKey('see-more-wg'),
                  onTap: (){
                    context.push('/cat-detail', extra: cat);
                  },
                  child: Container(
                    height: 30,
                    width: 82,
...
